--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "application engineering LegoShop coursework",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node server/svr.js",
     "test": "http-server"
