--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "fs": "0.0.1-security",
     "pg": "^8.7.3",
+    "postgresql": "0.0.1",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
