--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "path": "^0.12.7",
     "sqlite": "^3.0.6",
     "util": "^0.12.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
